<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FluffyAdventure</string>
    <string name="logo1">Fluffy</string>
    <string name="logo2">Adventure</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_carte">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="map_button_text">Carte</string>
    <string name="slider_button_text">Choix</string>
    <string name="choice_explaination">Choisis ton compagnon !</string>
    <string name="bunny_presentation">Le lapin est rapide et précis, il peut esquiver les attaques ennemies et inflige plus souvent des coups critiques</string>
    <string name="squirrel_presentation">L\'écureuil lance des noisettes à distance ! Elles font plus mal et peuvent toucher deux ennemis à la fois, mais ont une faible chance de rater leur cible.</string>
    <string name="sheep_presentation">Le mouton dispose de nombreux PV et dispose de meilleures capacités de soin</string>
    <string name="chose_name">Choisis lui un nom !</string>
    <string name="chose_attacks">Ton compagnon peut retenir jusqu\'a 4 sort à la fois</string>
    <string name="text_button_ok">OK !</string>
    <string name="title_activity_animal_choice_slider">AnimalChoiceSlider</string>
    <string name="save_attack_choice">Enregistrer</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="connec_button_text">Login</string>
    <string name="inscr_button_text">S\'inscrire</string>
    <string name="server_button_text">Serveur</string>

    <!-- SpawnStatus Activity -->
    <string name="mail_button_text">Messagerie</string>
    <string name="moveHQ_button_text">Déménager</string>
    <string name="mngSkills_button_text">Gérer les sorts</string>
    <string name="text_Health">Vie</string>
    <string name="text_type">Type</string>
    <string name="text_strength">Force</string>
    <string name="text_accuracy">Précision</string>
    <string name="text_evasiveness">Evasion</string>
    <string name="title_activity_animal_name">AnimalName</string>

    <!--Login & Sign Up Activities -->
    <string name="text_user">Utilisateur</string>
    <string name="text_password">Mot de passe</string>
    <string name="text_server">Serveur</string>
    <string name="text_port">Port</string>
    <string name="signin_button_text">Se connecter</string>
    <string name="signup_button_text">S\'inscrire</string>
    <string name="missing_text">champ obligatoire</string>

    <string name="title_activity_attack_choice">AttackChoice</string>

    <string name="BtnMapWanted_text">Localise ta cible sur la carte :</string>
    <string name="title_activity_mail_box">MailBox</string>

    <string name="btnInBox_text">Boite de réception</string>
    <string name="btnAnswer_text">Répondre</string>
    <string name="text_sender">Expéditeur :</string>
    <string name="btnCancelMail_text">Annuler</string>
    <string name="btnSendMail_text">Envoyer</string>
    <string name="text_recipient">Destinataire :</string>
    <string name="write_mail_hint">Entrez votre message ici</string>
    <string name="mail_object">Objet :</string>
    <string name="mail_objet_hint">Objet</string>

    <string name="btnNewText">Nouveau</string>
    <string name="addFriendTitle1">Ajoute</string>
    <string name="addFriendTitle2">Un ami</string>
    <string name="add_friend_button_text">Ajouter</string>
    <string name="title_activity_add_friend">AddFriendActivity</string>

    <string name="combat_instruction_1">Que doit faire </string>
    <string name="combat_instruction_2"> \?</string>

    <string name="newAnimalReplace">Veux-tu remplacer ton compagnon par celui-ci ?</string>
    <string name="newAnimalNew">Un nouveau compagnon a rejoint ton équipe !</string>



    <string name="Lipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas convallis nulla neque, non imperdiet sem egestas sit amet. Pellentesque ac tempus metus. Vestibulum fringilla mauris in ligula congue ullamcorper. Sed eu gravida nunc, non commodo lacus. Ut fermentum libero fringilla venenatis feugiat. Maecenas vel aliquet justo, quis fringilla dui. In fermentum ex elit, id sodales lorem iaculis a. Duis orci magna, eleifend nec tristique ut, luctus quis justo. Integer tortor tortor, faucibus eget diam at, facilisis tincidunt tellus.  In lacinia mauris consequat est sollicitudin, vitae porttitor sapien aliquam. Aenean posuere commodo nisi vitae posuere. Etiam at malesuada elit. Sed ligula sem, consequat a eros et, malesuada mollis nisl. Vivamus varius rhoncus erat, vitae ultricies nunc efficitur vel. Praesent non ex eros. Fusce erat tortor, scelerisque et nunc in, lacinia molestie augue. Donec dictum vel sapien nec varius. Suspendisse accumsan mollis ipsum eleifend tincidunt. Nullam sed vulputate massa. Duis pharetra ullamcorper erat at dignissim. Duis vitae magna dui. Maecenas sem ex, pretium et convallis eget, consequat et diam. Proin dui lacus, vehicula sed porttitor non, tincidunt sit amet augue.

Suspendisse ac nulla et mauris ornare dignissim. Suspendisse aliquet dapibus imperdiet. Phasellus maximus consequat turpis, nec tempor enim sollicitudin sed. Nulla euismod a lectus vitae eleifend. Aenean ultrices erat et sapien aliquet posuere vel vitae lectus. Duis bibendum, dui vel pellentesque fringilla, libero ipsum congue sapien, sit amet laoreet metus leo et velit. Vestibulum ac magna a quam sollicitudin dignissim a quis leo.

Integer lacinia diam sed porta laoreet. Donec non euismod erat. In diam leo, pellentesque vitae lacus eu, blandit placerat dolor. Cras sem urna, gravida eget ullamcorper at, fermentum a tellus. Nulla lobortis magna non finibus lacinia. Vestibulum vitae enim eget sem ullamcorper molestie. Nullam quis tortor aliquet, mollis enim in, venenatis tellus. Duis et dolor ornare, convallis lectus id, auctor magna. Quisque quis est vitae risus elementum tincidunt a a tortor. Donec sit amet mattis nibh. Duis tristique gravida lorem, et ultricies elit. Sed nulla lectus, finibus a orci ac, suscipit fringilla augue. Duis nunc erat, sodales eget gravida non, sollicitudin nec est. Morbi odio purus, fermentum et purus ut, scelerisque dapibus elit. Vestibulum id nunc nunc. Aliquam erat volutpat.

Integer nec euismod tellus. Nulla in ullamcorper tortor. Etiam fringilla elementum nibh condimentum lacinia. Sed vulputate ex tellus, vitae vehicula neque gravida et. Sed eu est non leo posuere porta vel a lectus. Aliquam iaculis lorem in leo viverra vestibulum. Vestibulum et pulvinar purus. Morbi vel tortor odio. Aliquam sodales nunc nec purus venenatis, in cursus eros consequat. Suspendisse elit risus, suscipit quis neque nec, viverra elementum est. Donec auctor vitae erat a feugiat. Nunc tempus dui vitae eros finibus accumsan. Phasellus dolor nisi, dictum eget orci ut, posuere aliquet arcu. </string>

</resources>
