<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.fluffyadventure.view.Status">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/map_button_text"
                android:id="@+id/BtnMap"
                style="@style/btnStyleOrange"
                android:singleLine="false"
                android:layout_margin="5dp" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mail_button_text"
                android:id="@+id/BtnMail"
                style="@style/btnStyleOrange"
                android:singleLine="false"
                android:layout_margin="5dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/imgPC"
                    android:src="@drawable/squirrel1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Name"
                    style="@style/Base.TextAppearance.AppCompat.Title"/>
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                    <TableRow android:gravity="center_horizontal">
                        <TextView
                            android:text="@string/text_type"
                            android:padding="5dp"
                            android:textStyle="bold" />
                        <TextView
                            android:text="blabla"
                            android:padding="5dp"/>
                    </TableRow>
                    <TableRow android:gravity="center_horizontal">
                        <TextView
                            android:text="@string/text_Health"
                            android:padding="5dp"
                            android:textStyle="bold" />
                        <TextView
                            android:text="blabla"
                            android:padding="5dp"/>
                    </TableRow>
                    <TableRow android:gravity="center_horizontal">
                        <TextView
                            android:text="@string/text_strength"
                            android:padding="5dp"
                            android:textStyle="bold" />
                        <TextView
                            android:text="blabla"
                            android:padding="5dp"/>
                    </TableRow>
                    <TableRow android:gravity="center_horizontal">
                        <TextView
                            android:text="@string/text_accuracy"
                            android:padding="5dp"
                            android:textStyle="bold" />
                        <TextView
                            android:text="blabla"
                            android:padding="5dp"/>
                    </TableRow>
                    <TableRow android:gravity="center_horizontal">
                        <TextView
                            android:text="@string/text_evasiveness"
                            android:padding="5dp"
                            android:textStyle="bold" />
                        <TextView
                            android:text="blabla"
                            android:padding="5dp"/>
                    </TableRow>
                </TableLayout>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/BtnMoveHQ"
        style="@style/btnStyleOrange"
        android:text="@string/moveHQ_button_text"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="true"
        android:layout_margin="5dp" />
</RelativeLayout>
