<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.fluffyadventure.view.ReadMailActivity"
    android:background="@drawable/wood_vertical"
    android:scaleType="center">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="5dp">
            <Button
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:id="@+id/BtnInBox"
                android:text="@string/btnInBox_text"
                style="@style/btnStyleOrangePetit"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>
            <Button
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:id="@+id/BtnAnswer"
                android:text="@string/btnAnswer_text"
                style="@style/btnStyleOrangePetit"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:background="@color/white">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/text_sender"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="blablablabla c'est mon ami"
                android:id="@+id/TextMailSender"
                android:textStyle="bold"/>
            </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_margin="5dp"
            android:padding="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/TextMailBody"
                android:text="@string/Lipsum"/>
        </ScrollView>

    </LinearLayout>

</RelativeLayout>
