<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.fluffyadventure.view.SignUpActivity">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop"
        android:id="@+id/Background_foret"
        android:src="@drawable/forest" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/logo1"
        android:id="@+id/Logo1"
        style="@style/textStyleLogo"
        android:layout_marginBottom="-5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Logo1"
        android:layout_centerHorizontal="true"
        android:text="@string/logo2"
        android:id="@+id/Logo2"
        style="@style/textStyleLogo"
        android:layout_marginBottom="15dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgLog"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/wood"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="10dp"
        android:id="@+id/loginBlock">

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bg"
            android:padding="10dp"
            android:hint="@string/text_user"
            android:textColorHint="#cccccc" />
        <EditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bg"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:hint="@string/text_password"
            android:textColorHint="#cccccc"
            android:inputType="textPassword" />
        <Button
            android:id="@+id/btnSingIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_margin="4dp"
            android:text="@string/signup_button_text"
            style="@style/btnStyleOrange"/>

    </LinearLayout>
    <!--LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/loginBlock"
        android:baselineAligned="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">
    <EditText
        android:id="@+id/etServer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_bg"
        android:padding="10dp"
        android:hint="adr. serveur"
        android:textColorHint="#cccccc" />
    <EditText
        android:id="@+id/etPort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_bg"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:hint="port"
        android:textColorHint="#cccccc"/>
    </LinearLayout-->
    <LinearLayout
        android:id="@+id/out2"
        android:weightSum="5"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="match_parent"
        android:gravity="center">
        <LinearLayout
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:orientation="vertical"
            android:weightSum="4.5"
            android:gravity="bottom">
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:gravity="center"
                android:src="@drawable/bunny1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:orientation="vertical"
            android:weightSum="4.5"
            android:gravity="bottom">
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="0px"
                android:layout_weight="1.5"
                android:gravity="center"
                android:src="@drawable/squirrel1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:orientation="vertical"
            android:weightSum="4.5"
            android:gravity="bottom">
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:gravity="center"
                android:src="@drawable/sheep1"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
