<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop"
        android:id="@+id/Background_foret"
        android:src="@drawable/forest" />

    <LinearLayout
        android:id="@+id/out2"
        android:weightSum="5"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="match_parent"
        android:gravity="center">
        <LinearLayout
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:orientation="vertical"
            android:weightSum="4.5"
            android:gravity="bottom">
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="0px"
                android:layout_weight="2.5"
                android:gravity="center"
                android:src="@drawable/bunny1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:orientation="vertical"
            android:weightSum="4.5"
            android:gravity="bottom">
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="0px"
                android:layout_weight="3.4"
                android:gravity="center"
                android:src="@drawable/squirrel1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:orientation="vertical"
            android:weightSum="4.5"
            android:gravity="bottom">
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="0px"
                android:layout_weight="2.5"
                android:gravity="center"
                android:src="@drawable/sheep1"/>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/logo1"
        android:id="@+id/Logo1"
        style="@style/textStyleLogo"
        android:layout_marginBottom="-5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Logo1"
        android:layout_centerHorizontal="true"
        android:text="@string/logo2"
        android:id="@+id/Logo2"
        style="@style/textStyleLogo"
        android:layout_marginBottom="15dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connec_button_text"
        android:id="@+id/loginBtn"
        android:layout_marginBottom="80dp"
        style="@style/btnStyleOrange"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:singleLine="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inscr_button_text"
        android:id="@+id/signInBtn"
        android:layout_marginBottom="20dp"
        style="@style/btnStyleOrange"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:singleLine="false" />



    <!--
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map_button_text"
        android:id="@+id/MapBtn"
        android:layout_marginBottom="20dp"
        style="@style/btnStyleOrange"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:singleLine="false" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slider_button_text"
        android:id="@+id/SlideBtn"
        android:layout_marginBottom="80dp"
        style="@style/btnStyleOrange"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:singleLine="false" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/BtnStatus"
        android:text="Statuts"
        style="@style/btnStyleOrange"
        android:layout_alignBottom="@id/MapBtn"
        android:layout_toLeftOf="@id/MapBtn"
        android:layout_marginRight="10dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/BtnCombat"
        android:text="Combat"
        style="@style/btnStyleOrange"
        android:layout_marginBottom="60dp"
        android:layout_marginRight="10dp"/>-->

</RelativeLayout>
